add clean_name and change id for album

--- a/pinry/pins/templates/pins/recent_albums.html
+++ b/pinry/pins/templates/pins/recent_albums.html
@@ -3,7 +3,7 @@
 {% block title %}Recent Pins{% endblock %}
 
 {% block yield %}
-    <div id="pins"></div>
+    <div id="albums"></div>
     <div id="loader" class="container">
         <div class="row">
             <div class="span2 offset5">
