--- a/templates/pins/recent_albums.html
+++ b/templates/pins/recent_albums.html
@@ -1,6 +1,6 @@
 {% extends 'core/base.html' %}
 
-{% block title %}Recent Pins{% endblock %}
+{% block title %}Recent Albums{% endblock %}
 
 {% block yield %}
     <div id="albums"></div>
