--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -16,6 +16,8 @@
         <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Monoton">
 
         <link rel="stylesheet" href="/static/core/css/pinry.css">
+
+        <link rel="stylesheet" href="/static/jqtree.css">
     </head>
     <body>
         <div class="navbar navbar-fixed-top">
@@ -60,7 +62,11 @@
             <script src="/static/vendor/imagesloaded/2.0.1/jquery.imagesloaded.min.js"></script>
         {% endif %}
 
+        <script src="/static/tree.jquery.js"></script>
         <script src="/static/core/js/pinry.js"></script>
         <script src="/static/core/js/messages.js"></script>
+        <script type="text/javascript">
+            {% block js %}{% endblock %}
+        </script>
     </body>
 </html>
