ajax to load pins of an album

--- a/templates/pins/recent_pins.html
+++ b/templates/pins/recent_pins.html
@@ -12,3 +12,10 @@
         </div>
     </div>
 {% endblock %}
+
+{% block js2 %}
+<script type="text/javascript">
+    var album_id = {{id}};
+</script>
+<script src="/static/core/js/pinry.js"></script>
+{% endblock %}
