--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -63,11 +63,8 @@
         {% endif %}
 
         <script src="/static/tree.jquery.js"></script>
-        <script src="/static/core/js/pinry.js"></script>
         <script src="/static/core/js/albums.js"></script>
         <script src="/static/core/js/messages.js"></script>
-        <script type="text/javascript">
-            {% block js %}{% endblock %}
-        </script>
+        {% block js2 %}{% endblock %}
     </body>
 </html>
