--- a/templates/pins/new_pin.html
+++ b/templates/pins/new_pin.html
@@ -2,7 +2,6 @@
 
 {% load bootstrap_field %}
 
-
 {% block title %}New Pin{% endblock %}
 
 {% block yield %}
@@ -10,7 +9,7 @@
         <div class="row">
             <div class="span6 offset3" id="form">
                 <h1>New Pin</h1>
-                <form action="{% url pins:new-pin %}" method="post" class="form-horizontal">
+                <form action="{% url pins:new-pin id %}" method="post" class="form-horizontal">
                     {% csrf_token %}
                     {% for field in form %}
                         {% bootstrap_field field %}
@@ -24,3 +23,4 @@
         </div>
     </div>
 {% endblock %}
+
