--- a/templates/pins/new_pin.html
+++ b/templates/pins/new_pin.html
@@ -16,7 +16,7 @@
                     {% endfor %}
                     <div class="form-actions">
                         <button type="submit" class="btn btn-primary">Post</button>
-                        <a href="{% url core:home %}" class="btn">Cancel</a>
+                        <a href="{% url pins:new-pin id %}" class="btn">Cancel</a>
                     </div>
                 </form>
             </div>
