--- a/templates/pins/recent_pins.html
+++ b/templates/pins/recent_pins.html
@@ -1,5 +1,5 @@
 {% extends 'core/base.html' %}
-{% load new-pin %}
+{% load new_pin %}
 
 {% block title %}Recent Pins{% endblock %}
 
@@ -17,7 +17,7 @@
         </div>
     </div>
 
-    {% new-pin id %}
+    {% new_pin id %}
 {% endblock %}
 
 {% block js %}
