--- a/templates/pins/templatetags/new_pin.html
+++ b/templates/pins/templatetags/new_pin.html
@@ -4,7 +4,7 @@
     <div class="modal-header">
         <h3>New Pin</h3>
     </div>
-    <form action="{% url pins:new-pin id %}" method="post" class="form-horizontal">
+    <form enctype="multipart/form-data" action="{% url pins:new-pin id %}" method="post" class="form-horizontal">
         <div class="modal-body">
             {% csrf_token %}
             {% for field in form %}
