--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -28,6 +28,7 @@
                     {% if user.is_authenticated %}
                         <li><a href="#new-album" data-toggle="modal">New Album</a></li>
                         {% block nav %}{% endblock %}
+                        <li><a href="{% url core:logout %}">{{user}}</a></li>
                         <li><a href="{% url core:logout %}">Logout</a></li>
                     {% else %}
                         <li><a href="{% url core:login %}">Login</a></li>
