--- a/templates/pins/recent_pins.html
+++ b/templates/pins/recent_pins.html
@@ -4,7 +4,7 @@
 {% block title %}Recent Pins{% endblock %}
 
 {% block nav %}
-<li><a href="#new-pin" data-toggle="modal">New Pin</a></li>
+<li><a href="#new-pin" data-toggle="modal">上传照片</a></li>
 {% endblock %}
 
 {% block yield %}
