--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -26,13 +26,13 @@
 
                 <ul class="nav pull-right">
                     {% if user.is_authenticated %}
-                        <li><a href="#new-album" data-toggle="modal">New Album</a></li>
+                        <li><a href="#new-album" data-toggle="modal">新建相册</a></li>
                         {% block nav %}{% endblock %}
                         <li><a href="{% url core:logout %}">{{user}}</a></li>
-                        <li><a href="{% url core:logout %}">Logout</a></li>
+                        <li><a href="{% url core:logout %}">退出</a></li>
                     {% else %}
-                        <li><a href="{% url core:login %}">Login</a></li>
-                        <li><a href="{% url core:register %}">Register</a></li>
+                        <li><a href="{% url core:login %}">登录</a></li>
+                        <li><a href="{% url core:register %}">注册</a></li>
                     {% endif %}
                 </ul>
             </div>
