--- a/templates/pins/new_pin.html
+++ b/templates/pins/new_pin.html
@@ -2,7 +2,7 @@
 
 {% load bootstrap_field %}
 
-{% block title %}New Pin{% endblock %}
+{% block title %}上传照片{% endblock %}
 
 {% block yield %}
     <div class="container">
@@ -15,8 +15,8 @@
                         {% bootstrap_field field %}
                     {% endfor %}
                     <div class="form-actions">
-                        <button type="submit" class="btn btn-primary">Post</button>
-                        <a href="{% url pins:recent-pins id %}" class="btn">Cancel</a>
+                        <button type="submit" class="btn btn-primary">提交</button>
+                        <a href="{% url pins:recent-pins id %}" class="btn">取消</a>
                     </div>
                 </form>
             </div>
