--- a/templates/pins/templatetags/new_pin.html
+++ b/templates/pins/templatetags/new_pin.html
@@ -2,7 +2,7 @@
 
 <div class="modal fade" id="new-pin">
     <div class="modal-header">
-        <h3>New Pin</h3>
+        <h3>上传照片</h3>
     </div>
     <form enctype="multipart/form-data" action="{% url pins:new-pin id %}" method="post" class="form-horizontal">
         <div class="modal-body">
@@ -12,8 +12,8 @@
             {% endfor %}
         </div>
         <div class="modal-footer">
-            <button type="submit" class="btn btn-primary">Post</button>
-            <a href="#new-pin" data-toggle="modal" class="btn">Cancel</a>
+            <button type="submit" class="btn btn-primary">提交</button>
+            <a href="#new-pin" data-toggle="modal" class="btn">取消</a>
         </div>
     </form>
 </div>
