add url for upload

--- a/templates/pins/recent_pins.html
+++ b/templates/pins/recent_pins.html
@@ -5,6 +5,7 @@
 
 {% block nav %}
 <li><a href="#new-pin" data-toggle="modal">上传照片</a></li>
+<li><a href="/pins/{{album.id}}/upload" data-toggle="modal">批量上传</a></li>
 {% endblock %}
 
 
