--- a/templates/core/login.html
+++ b/templates/core/login.html
@@ -3,21 +3,21 @@
 {% load bootstrap_field %}
 
 
-{% block title %}Login{% endblock %}
+{% block title %}登录{% endblock %}
 
 {% block yield %}
     <div class="container">
         <div class="row">
             <div id="form" class="span6 offset3">
-                <h1>Login</h1>
+                <h1>登录</h1>
                 <form action="{% url core:login %}" method="post" class="form-horizontal">
                     {% csrf_token %}
                     {% for field in form %}
                         {% bootstrap_field field %}
                     {% endfor %}
                     <div class="form-actions">
-                        <button type="submit" class="btn btn-primary">Login</button>
-                        <a href="{% url core:home %}" class="btn">Cancel</a>
+                        <button type="submit" class="btn btn-primary">登录</button>
+                        <a href="{% url core:home %}" class="btn">取消</a>
                     </div>
                 </form>
             </div>
