--- a/templates/pins/recent_pins.html
+++ b/templates/pins/recent_pins.html
@@ -4,25 +4,39 @@
 {% block title %}Recent Pins{% endblock %}
 
 {% block nav %}
+<li><a data-toggle="modal" href="#id_delete_album" >删除相册</a></li>
 <li><a href="/pins/{{album.id}}/upload" data-toggle="modal">批量上传</a></li>
 {% endblock %}
-
 
 {% block album %}
 {{album.name}}
 {% endblock %}
 
 {% block yield %}
-    <div id="pins"></div>
-    <div id="loader" class="container">
-        <div class="row">
-            <div class="span2 offset5">
-                <img src="/static/core/img/loader.gif" alt="Loader">
-            </div>
+<div id="pins"></div>
+<div id="loader" class="container">
+    <div class="row">
+        <div class="span2 offset5">
+            <img src="/static/core/img/loader.gif" alt="Loader">
         </div>
     </div>
+</div>
 
-    {% new_pin album.id %}
+{% new_pin album.id %}
+
+<div class="modal hide fade" id="id_delete_album">
+    <div class="modal-header">
+        <a class="close" data-dismiss="modal">&times;</a>
+        <h3>删除相册</h3>
+    </div>
+    <div class="modal-body">
+        <p>相册中所有的照片都将被删除,确认继续?</p>
+    </div>
+    <div class="modal-footer">
+        <a href="#" class="btn close" data-dismiss="modal">取消</a>
+        <a href="{% url pins:delete-album album.id %}" class="btn btn-primary btn-danger">确认删除</a>
+    </div>
+</div>
 {% endblock %}
 
 {% block js %}
