--- a/templates/pins/pin_form.html
+++ b/templates/pins/pin_form.html
@@ -54,18 +54,18 @@
         <div class="modal-footer">
             <a class="btn modal-download" target="_blank">
                 <i class="icon-download"></i>
-                <span>Download</span>
+                <span>下载</span>
             </a>
             <a class="btn btn-success modal-play modal-slideshow" data-slideshow="5000">
                 <i class="icon-play icon-white"></i>
-                <span>Slideshow</span>
+                <span>幻灯片</span>
             </a>
             <a class="btn btn-info modal-prev">
                 <i class="icon-arrow-left icon-white"></i>
-                <span>Previous</span>
+                <span>上一张</span>
             </a>
             <a class="btn btn-primary modal-next">
-                <span>Next</span>
+                <span>下一张</span>
                 <i class="icon-arrow-right icon-white"></i>
             </a>
         </div>
