--- a/templates/pins/album_base.html
+++ b/templates/pins/album_base.html
@@ -5,7 +5,7 @@
 {% block nav %}
 {% block var %}{% endblock %}
 {% if user.is_authenticated and user.username == album.user.username %}
-<li><a data-toggle="modal" href="#id_delete_album" >删除相册</a></li>
+<li><a data-toggle="modal" href="#id_delete_album" ><i class="icon-trash"></i>删除相册</a></li>
 {% endif %}
 {% endblock %}
 
