--- a/templates/pins/pin_form.html
+++ b/templates/pins/pin_form.html
@@ -7,7 +7,7 @@
 {% block title %}上传照片{% endblock %}
 
 {% block var %}
-<li><a href="{% url pins:recent-pins album.id %}" data-toggle="modal">返回相册</a></li>
+<li><a href="{% url pins:recent-pins album.id %}" data-toggle="modal"><i class="icon-arrow-left"></i>返回相册</a></li>
 {% endblock %}
 
 {% block album_content %}
