use STATIC_URL in all static urls

--- a/templates/pins/recent_pins.html
+++ b/templates/pins/recent_pins.html
@@ -12,7 +12,7 @@
 <div id="loader" class="container">
     <div class="row">
         <div class="span2 offset5">
-            <img src="/static/core/img/loader.gif" alt="Loader">
+            <img src="{{STATIC_URL}}core/img/loader.gif" alt="Loader">
         </div>
     </div>
 </div>
@@ -27,5 +27,4 @@
         is_owner = true;
     {% endif %}
 </script>
-<script src="/static/core/js/pinry.js"></script>
 {% endblock %}
