--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -6,13 +6,13 @@
         <title>Pinry - {% block title %}{% endblock %}</title>
 
         {% if debug %}
-            <link rel="stylesheet" href="/static/vendor/bootstrap/2.0.3/css/bootstrap.css">
-            <link rel="stylesheet" href="/static/vendor/fancybox/2.0.6/jquery.fancybox.css">
+            <link rel="stylesheet" href="{{ STATIC_URL }}vendor/bootstrap/2.0.3/css/bootstrap.css">
+            <link rel="stylesheet" href="{{ STATIC_URL }}vendor/fancybox/2.0.6/jquery.fancybox.css">
         {% else %}
-            <link rel="stylesheet" href="/static/vendor/bootstrap/2.0.3/css/bootstrap.min.css">
-            <link rel="stylesheet" href="/static/vendor/fancybox/2.0.6/jquery.fancybox.css">
+            <link rel="stylesheet" href="{{ STATIC_URL }}vendor/bootstrap/2.0.3/css/bootstrap.min.css">
+            <link rel="stylesheet" href="{{ STATIC_URL }}vendor/fancybox/2.0.6/jquery.fancybox.css">
         {% endif %}
-        <link rel="stylesheet" href="/static/core/css/pinry.css">
+        <link rel="stylesheet" href="{{ STATIC_URL }}core/css/pinry.css">
 		<!-- Generic page styles -->
 		<link rel="stylesheet" href="{{ STATIC_URL }}fileupload/css/style.css">
 		<!-- Bootstrap styles for responsive website layout, supporting different screen sizes -->
@@ -54,33 +54,37 @@
         {% new_album %}
 
         {% if debug %}
-            <script src="/static/vendor/jquery/1.7.2/jquery.js"></script>
-            <script src="/static/vendor/bootstrap/2.0.3/js/bootstrap.js"></script>
-            <script src="/static/vendor/wookmark/0.5/jquery.wookmark.js"></script>
-            <script src="/static/vendor/fancybox/2.0.6/jquery.fancybox.js"></script>
-            <script src="/static/vendor/imagesloaded/2.0.1/jquery.imagesloaded.js"></script>
+            <script src="{{ STATIC_URL }}vendor/jquery/1.7.2/jquery.js"></script>
+            <script src="{{ STATIC_URL }}vendor/bootstrap/2.0.3/js/bootstrap.js"></script>
+            <script src="{{ STATIC_URL }}vendor/wookmark/0.5/jquery.wookmark.js"></script>
+            <script src="{{ STATIC_URL }}vendor/fancybox/2.0.6/jquery.fancybox.js"></script>
+            <script src="{{ STATIC_URL }}vendor/imagesloaded/2.0.1/jquery.imagesloaded.js"></script>
         {% else %}
-            <script src="/static/vendor/jquery/1.7.2/jquery.min.js"></script>
-            <script src="/static/vendor/bootstrap/2.0.3/js/bootstrap.min.js"></script>
-            <script src="/static/vendor/wookmark/0.5/jquery.wookmark.min.js"></script>
-            <script src="/static/vendor/fancybox/2.0.6/jquery.fancybox.pack.js"></script>
-            <script src="/static/vendor/imagesloaded/2.0.1/jquery.imagesloaded.min.js"></script>
+            <script src="{{ STATIC_URL }}vendor/jquery/1.7.2/jquery.min.js"></script>
+            <script src="{{ STATIC_URL }}vendor/bootstrap/2.0.3/js/bootstrap.min.js"></script>
+            <script src="{{ STATIC_URL }}vendor/wookmark/0.5/jquery.wookmark.min.js"></script>
+            <script src="{{ STATIC_URL }}vendor/fancybox/2.0.6/jquery.fancybox.pack.js"></script>
+            <script src="{{ STATIC_URL }}vendor/imagesloaded/2.0.1/jquery.imagesloaded.min.js"></script>
         {% endif %}
 
-        <script src="/static/core/js/albums.js"></script>
-        <script src="/static/core/js/messages.js"></script>
-		
-		<script src="{{ STATIC_URL }}fileupload/js/jquery.ui.widget.js"></script>
-		<script src="{{ STATIC_URL }}fileupload/js/tmpl.min.js"></script>
-		<script src="{{ STATIC_URL }}fileupload/js/load-image.min.js"></script>
-		<script src="{{ STATIC_URL }}fileupload/js/canvas-to-blob.min.js"></script>
-		<script src="{{ STATIC_URL }}fileupload/js/bootstrap-image-gallery.min.js"></script>
-		<script src="{{ STATIC_URL }}fileupload/js/jquery.iframe-transport.js"></script>
-		<script src="{{ STATIC_URL }}fileupload/js/jquery.fileupload.js"></script>
-		<script src="{{ STATIC_URL }}fileupload/js/jquery.fileupload-fp.js"></script>
-		<script src="{{ STATIC_URL }}fileupload/js/jquery.fileupload-ui.js"></script>
-		<script src="{{ STATIC_URL }}fileupload/js/locale.js"></script>
-		<script src="{{ STATIC_URL }}fileupload/js/main.js"></script>
+        <script src="{{ STATIC_URL }}core/js/albums.js"></script>
+        <script src="{{ STATIC_URL }}core/js/pinry.js"></script>
+        <script src="{{ STATIC_URL }}core/js/messages.js"></script>
+        <script src="{{ STATIC_URL }}fileupload/js/jquery.ui.widget.js"></script>
+        <script src="{{ STATIC_URL }}fileupload/js/tmpl.min.js"></script>
+        <script src="{{ STATIC_URL }}fileupload/js/load-image.min.js"></script>
+        <script src="{{ STATIC_URL }}fileupload/js/canvas-to-blob.min.js"></script>
+        <script src="{{ STATIC_URL }}fileupload/js/bootstrap-image-gallery.min.js"></script>
+        <script src="{{ STATIC_URL }}fileupload/js/jquery.iframe-transport.js"></script>
+        <script src="{{ STATIC_URL }}fileupload/js/jquery.fileupload.js"></script>
+        <script src="{{ STATIC_URL }}fileupload/js/jquery.fileupload-fp.js"></script>
+        <script src="{{ STATIC_URL }}fileupload/js/jquery.fileupload-ui.js"></script>
+        <script src="{{ STATIC_URL }}fileupload/js/locale.js"></script>
+        <script src="{{ STATIC_URL }}fileupload/js/main.js"></script>
+        <script type="text/javascript">
+            var STATIC_URL = '{{ STATIC_URL }}';
+            var MEDIA_URL  = '{{ MEDIA_URL }}';
+        </script>
         {% block js %}{% endblock %}
     </body>
 </html>
