--- a/static/core/css/pinry.css
+++ b/static/core/css/pinry.css
@@ -1,6 +1,6 @@
 body {
     margin-top: 70px;
-    background: url("/static/core/img/background.png");
+    background: url("../img/background.png");
 }
 
 .navbar-inner {
