--- a/templates/pins/recent_albums.html
+++ b/templates/pins/recent_albums.html
@@ -1,7 +1,7 @@
 {% extends 'core/base.html' %}
 
 {% block title %}Recent Albums{% endblock %}
-
+{% block home_active %}active{% endblock %}
 {% block yield %}
     <div id="albums"></div>
     <div id="loader" class="container">
