--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <meta content="text/html; charset=utf-8" http-equiv="content-type">
-        <title>Pinry - {% block title %}{% endblock %}</title>
+        <title>Pshare - {% block title %}{% endblock %}</title>
 
         {% if debug %}
             <link rel="stylesheet" href="{{ STATIC_URL }}vendor/bootstrap/2.0.3/css/bootstrap.css">
@@ -34,6 +34,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </a>
+                    <a href="#" class="brand">Pshare</a>
 
                     <!-- Everything you want hidden at 940px or less, place within here -->
                     <div class="nav-collapse">
