--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -34,7 +34,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </a>
-                    <a href="#" class="brand">Pshare</a>
+                    <a href="{% url core:home %}" class="brand">Pshare</a>
 
                     <!-- Everything you want hidden at 940px or less, place within here -->
                     <div class="nav-collapse">
