--- a/templates/pins/recent_pins.html
+++ b/templates/pins/recent_pins.html
@@ -24,6 +24,7 @@
     var album_id = {{album.id}};
     var is_owner = false;
     var per_page = {{ per_page }};
+    var total = {{ total }};
     {% if album.user.username == user.username %}
         is_owner = true;
     {% endif %}
