--- a/templates/pins/pin_form.html
+++ b/templates/pins/pin_form.html
@@ -12,6 +12,13 @@
 
 {% block album_content %}
 <div class="container">
+<!--[if IE ]>
+<p>你使用的是IE内核的浏览器,它不支持文件多选.推荐使用
+<a href="http://www.google.cn/chrome/intl/zh-CN/landing_chrome.html">Chrome</a>,
+<a href="http://firefox.com.cn/download/">Firefox</a>或
+<a href="http://www.opera.com/download/">Opera</a>
+.</p>
+<![endif]-->
 <form id="fileupload" method="post" action="." enctype="multipart/form-data">{% csrf_token %}
     <div class="row fileupload-buttonbar">
         <div class="span7">
