--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <meta content="text/html; charset=utf-8" http-equiv="content-type">
-        <title>Pshare - {% block title %}{% endblock %}</title>
+        <title>Pshare</title>
 
         {% if debug %}
             <link rel="stylesheet" href="{{ STATIC_URL }}vendor/bootstrap/2.0.3/css/bootstrap.css">
@@ -12,38 +12,42 @@
             <link rel="stylesheet" href="{{ STATIC_URL }}vendor/bootstrap/2.0.3/css/bootstrap.min.css">
             <link rel="stylesheet" href="{{ STATIC_URL }}vendor/fancybox/2.0.6/jquery.fancybox.css">
         {% endif %}
-        <link rel="stylesheet" href="{{ STATIC_URL }}core/css/pinry.css">
         <!-- Generic page styles -->
-        <link rel="stylesheet" href="{{ STATIC_URL }}fileupload/css/style.css">
+        <!-- link rel="stylesheet" href="{{ STATIC_URL }}fileupload/css/style.css" -->
         <!-- Bootstrap styles for responsive website layout, supporting different screen sizes -->
         <link rel="stylesheet" href="{{ STATIC_URL }}fileupload/css/bootstrap-responsive.min.css">
         <!-- CSS to style the file input field as button and adjust the Bootstrap progress bars -->
         <link rel="stylesheet" href="{{ STATIC_URL }}fileupload/css/bootstrap-image-gallery.min.css">
         <link rel="stylesheet" href="{{ STATIC_URL }}fileupload/css/jquery.fileupload-ui.css">
+        <link rel="stylesheet" href="{{ STATIC_URL }}core/css/pinry.css">
+        {% block extra_head %}
+        {% endblock %}
     </head>
     <body>
         <div class="navbar navbar-fixed-top">
             <div class="navbar-inner">
-                <div class="container">
+                <div class="container-fluid">
                     <!-- .btn-navbar is used as the toggle for collapsed navbar content -->
                     <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </a>
-                    <a href="{% url core:home %}" class="brand">Pshare</a>
+                    <a href="{% url core:home %}" class="brand">
+                        <img src="{{ STATIC_URL }}album.png" alt="Pshare" width=24px height=24px/>Pshare
+                    </a>
 
                     <!-- Everything you want hidden at 940px or less, place within here -->
                     <div class="nav-collapse">
                         <!-- .nav, .navbar-search, .navbar-form, etc -->
                         <ul class="nav">
                             <li class="{% block home_active %}{% endblock %}"><a href="{% url core:home %}"><i class="icon-home icon-white"></i>首页</a></li>
-                            {% block nav_album %}{% endblock %}
+                            {% block nav_left %}{% endblock %}
                         </ul>
                         <ul class="nav pull-right">
+                            {% block nav_right %}{% endblock %}
                             {% if user.is_authenticated %}
-                                {% block nav %}{% endblock %}
-                                <li><a href="#new-album" data-toggle="modal"><i class="icon-folder-open icon-white"></i>新建相册</a></li>
+                                <li><a href="#new-album" data-toggle="modal"><i class="icon-folder-open icon-white"></i>新建</a></li>
                                 <li><a href="#"><i class="icon-user icon-white"></i>{{user}}</a></li>
                                 <li><a href="{% url core:logout %}"><i class="icon-off icon-white"></i>退出</a></li>
                             {% else %}
@@ -56,14 +60,16 @@
         </div>
 
         {% if messages %}
-            <ul class="messages">
-                {% for message in messages %}
-                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-                {% endfor %}
-            </ul>
+        <ul class="messages">
+            {% for message in messages %}
+            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+            {% endfor %}
+        </ul>
         {% endif %}
 
-        {% block yield %}{% endblock %}
+        <div class="container-fluid">
+            {% block content %}{% endblock %}
+        </div>
         {% new_album %}
 
         {% if debug %}
@@ -80,8 +86,6 @@
             <script src="{{ STATIC_URL }}vendor/imagesloaded/2.0.1/jquery.imagesloaded.min.js"></script>
         {% endif %}
 
-        <script src="{{ STATIC_URL }}core/js/albums.js"></script>
-        <script src="{{ STATIC_URL }}core/js/messages.js"></script>
         <script src="{{ STATIC_URL }}fileupload/js/jquery.ui.widget.js"></script>
         <script src="{{ STATIC_URL }}fileupload/js/tmpl.min.js"></script>
         <script src="{{ STATIC_URL }}fileupload/js/load-image.min.js"></script>
@@ -93,6 +97,8 @@
         <script src="{{ STATIC_URL }}fileupload/js/jquery.fileupload-ui.js"></script>
         <script src="{{ STATIC_URL }}fileupload/js/locale.js"></script>
         <script src="{{ STATIC_URL }}fileupload/js/main.js"></script>
+        <!-- script src="{{ STATIC_URL }}core/js/albums.js"-->
+        <script src="{{ STATIC_URL }}core/js/messages.js"></script>
         <script type="text/javascript">
             var STATIC_URL = '{{ STATIC_URL }}';
             var MEDIA_URL  = '{{ MEDIA_URL }}';
