--- a/templates/core/login.html
+++ b/templates/core/login.html
@@ -1,31 +1,7 @@
 {% extends 'core/base.html' %}
-
 {% load bootstrap_field %}
 
-
-{% block title %}登录{% endblock %}
-
-{% block yieldi2 %}
-    <div class="container">
-        <div class="row">
-            <div id="form" class="span6 offset3">
-                <h1>登录</h1>
-                <form action="{% url core:login %}" method="post" class="form-horizontal">
-                    {% csrf_token %}
-                    {% for field in form %}
-                        {% bootstrap_field field %}
-                    {% endfor %}
-                    <div class="form-actions">
-                        <button type="submit" class="btn btn-primary">登录</button>
-                        <a href="{% url core:home %}" class="btn">取消</a>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
-{% endblock %}
-
-{% block yield %}
+{% block content %}
 <div class="span6 offset3 login">
     <form class="form" action="" method="post">
         {% csrf_token %}
