fix 404.html and 500.html

--- a/templates/404.html
+++ b/templates/404.html
@@ -3,7 +3,7 @@
 
 {% block title %}404{% endblock %}
 
-{% block yield %}
+{% block content %}
     <div class="container">
         <div class="row">
             <div id="form" class="span6 offset3">
