--- a/templates/500.html
+++ b/templates/500.html
@@ -1,9 +1,6 @@
 {% extends 'core/base.html' %}
 
-
-{% block title %}500{% endblock %}
-
-{% block yield %}
+{% block content %}
     <div class="container">
         <div class="row">
             <div id="form" class="span6 offset3">
